# wtforms-formly

./: .pre-commit-config.yaml  hatch_build.py  pyproject.toml
docs/: conf.py
src/wtforms_formly/: __init__.py  form.py  i18n.py  meta.py  validators.py
src/wtforms_formly/csrf/: core.py
src/wtforms_formly/fields/: __init__.py  choices.py  core.py  datetime.py  form.py  list.py  numeric.py
src/wtforms_formly/locale/ar/LC_MESSAGES/: wtforms_formly.mo  wtforms_formly.po
src/wtforms_formly/locale/bg/LC_MESSAGES/: wtforms_formly.mo  wtforms_formly.po
src/wtforms_formly/locale/ca/LC_MESSAGES/: wtforms_formly.mo  wtforms_formly.po
src/wtforms_formly/locale/cs_CZ/LC_MESSAGES/: wtforms_formly.mo  wtforms_formly.po
src/wtforms_formly/locale/cy/LC_MESSAGES/: wtforms_formly.mo  wtforms_formly.po
src/wtforms_formly/locale/de/LC_MESSAGES/: wtforms_formly.mo  wtforms_formly.po
src/wtforms_formly/locale/de_CH/LC_MESSAGES/: wtforms_formly.mo  wtforms_formly.po
src/wtforms_formly/locale/el/LC_MESSAGES/: wtforms_formly.mo  wtforms_formly.po
src/wtforms_formly/locale/en/LC_MESSAGES/: wtforms_formly.mo  wtforms_formly.po
src/wtforms_formly/locale/es/LC_MESSAGES/: wtforms_formly.mo  wtforms_formly.po
src/wtforms_formly/locale/et/LC_MESSAGES/: wtforms_formly.mo  wtforms_formly.po
src/wtforms_formly/locale/fa/LC_MESSAGES/: wtforms_formly.mo  wtforms_formly.po
src/wtforms_formly/locale/fi/LC_MESSAGES/: wtforms_formly.mo  wtforms_formly.po
src/wtforms_formly/locale/fr/LC_MESSAGES/: wtforms_formly.mo  wtforms_formly.po
src/wtforms_formly/locale/he/LC_MESSAGES/: wtforms_formly.mo  wtforms_formly.po
src/wtforms_formly/locale/hu/LC_MESSAGES/: wtforms_formly.mo  wtforms_formly.po
src/wtforms_formly/locale/it/LC_MESSAGES/: wtforms_formly.mo  wtforms_formly.po
src/wtforms_formly/locale/ja/LC_MESSAGES/: wtforms_formly.mo  wtforms_formly.po
src/wtforms_formly/locale/kk/LC_MESSAGES/: wtforms_formly.mo  wtforms_formly.po
src/wtforms_formly/locale/ko/LC_MESSAGES/: wtforms_formly.mo  wtforms_formly.po
src/wtforms_formly/locale/nb/LC_MESSAGES/: wtforms_formly.mo  wtforms_formly.po
src/wtforms_formly/locale/nl/LC_MESSAGES/: wtforms_formly.mo  wtforms_formly.po
src/wtforms_formly/locale/pl/LC_MESSAGES/: wtforms_formly.mo  wtforms_formly.po
src/wtforms_formly/widgets/: __init__.py  core.py
tests/: conftest.py  test_csrf.py  test_form.py  test_i18n.py  test_locale_babel.py  test_webob.py  test_widgets.py
tests/fields/: test_boolean.py  test_color.py  test_custom.py  test_date.py  test_datetime.py  test_datetimelocal.py  test_decimal.py  test_defaults.py  test_field.py  test_file.py  test_filters.py  test_flags.py  test_float.py  test_form.py  test_hidden.py  test_html5.py  test_integer.py  test_label.py  test_list.py  test_month.py  test_password.py  test_radio.py  test_select.py  test_selectmultiple.py  test_string.py  test_submit.py  test_textarea.py  test_time.py  test_week.py
tests/formly/: test_textarea.py
tests/validators/: test_anyof.py  test_data_required.py  test_disabled.py  test_email.py  test_equal_to.py  test_input_required.py  test_ipaddress.py  test_lazy_proxy.py  test_length.py  test_mac_address.py  test_noneof.py  test_number_range.py  test_optional.py  test_readonly.py  test_regexp.py  test_url.py  test_uuid.py  test_validators.py
(+18 files in other folders)
